--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,21 +2,22 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="ISO-8859-1">
-  <title>Login Form</title>
+  <title>INDEX HTML</title>
   <link th:href="@{/css/style.css}" rel="stylesheet">
 </head>
 <body>
 <div class="container">
+  INDEX HTML FILE
   <div class="wrapper">
     <div class="title"><span>haenous color working css & auth controller UI test</span></div>
     <form action="#" th:action="@{/loginuser}" th:object="${user}" method="post">
       <label for="username">Name</label>
-      <input type="text" th:field="*{username}" id="username" placeholder="Name">
-      <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
+      <input type="text" th:field="${user.username}" id="username" placeholder="Name">
+      <span th:if="${#fields.hasErrors('username')}" th:errors="${user.username}"></span>
       <br>
       <label for="password">Password</label>
-      <input type="text" th:field="*{password}" id="password" placeholder="password">
-      <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
+      <input type="text" th:field="${user.password}" id="password" placeholder="password">
+      <span th:if="${#fields.hasErrors('password')}" th:errors="${user.password}"></span>
       <input type="submit" value="Add User">
     </form>
   </div>
