--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 <div class="container">
+    WELCOME HTML
     <h3>proof getting user object & fields from contoller</h3>
-    Username <p th:text="${user.username}"></p>
+    Username: [[${user.username}]]
 </div>
 </body>
 </html></title>
