user auth via DB now working

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -9,7 +9,7 @@
 <div class="container">
     WELCOME HTML
     <h3>proof getting user object & fields from contoller</h3>
-    Username: [[${user.username}]]
+    Username: [[${username}]]
 </div>
 </body>
 </html></title>
