--- a/src/main/resources/templates/login/welcome.html
+++ b/src/main/resources/templates/login/welcome.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="ISO-8859-1">
     <title>Welcome</title>
@@ -8,7 +8,12 @@
 <body>
 <div class="container">
     WELCOME VIEW
+    <br>
     Username: [[${username}]]
+    <br>
+    Security based user: <span sec:authentication="principal.username">User</span>
+    <br>
+    Security based Roles: <span sec:authentication="principal.authorities">Roles</span>
     <br>
     <h3>contoller paraemters and local variables</h3>
     <tr th:each="entry : ${keymap}">
