--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -44,18 +44,13 @@
                     <h2 class="text-center">Login Form</h2>
                 </div>
                 <div class="card-body">
-                    <form
-                        method="post"
-                        role="form"
-                        th:action="@{/login}"
-                        class="form-horizontal"
-                    >
+                    <form role="user" th:action="@{/loginuser}" class="form-horizontal" method="post">
                         <div class="form-group mb-3">
                             <label class="control-label"> username</label>
                             <input
                                 type="text"
-                                id="firstName"
-                                name="firstName"
+                                id="username"
+                                name="username"
                                 class="form-control"
                                 placeholder="Enter username"
                             />
