--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -42,17 +42,17 @@
         <form action="#" method="post" role="form" th:action="@{/register/save}" th:object="${user}">
 <!--          <form action="#" th:action="@{/contract/create}" th:object="${contract}" method="post">-->
           <div class="form-group mb-3">
-            <label class="form-label">First Name</label>
+            <label class="form-label">User Name</label>
             <input
                 class="form-control"
-                id="firstName"
-                name="firstName"
-                placeholder="Enter first name"
-                th:field="*{firstName}"
+                id="username"
+                name="username"
+                placeholder="Enter Username"
+                th:field="*{username}"
                 type="text"
             />
-            <p th:errors = "*{firstName}" class="text-danger"
-               th:if="${#fields.hasErrors('firstName')}"></p>
+            <p th:errors = "*{username}" class="text-danger"
+               th:if="${#fields.hasErrors('username')}"></p>
           </div>
 
           <div class="form-group mb-3">
