--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -18,16 +18,12 @@
   <table class="table table-bordered table-hover">
     <thead class="table-dark">
     <tr>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Email</th>
+      <th>Username</th>
     </tr>
     </thead>
     <tbody>
     <tr th:each = "user : ${users}">
-      <td th:text = "${user.firstName}"></td>
-      <td th:text = "${user.lastName}"></td>
-      <td th:text = "${user.email}"></td>
+      <td th:text = "${user.username}"></td>
     </tr>
     </tbody>
   </table>
