- added creatorrole enum - replace appuser->contract entity mapping with participant ids

--- a/src/main/resources/templates/contract/display.html
+++ b/src/main/resources/templates/contract/display.html
@@ -25,6 +25,13 @@
       <input type="text" th:field="${contract.text}" id="text" placeholder="text">
       <span th:if="${#fields.hasErrors('text')}" th:errors="${contract.text}"></span>
       <br>
+
+      <label>Role:</label>
+      <select name="creatorRole" th:field="${contract.creatorRole}">
+        <option th:each="role : ${T(com.prosilion.scdecisionmatrix.model.entity.CreatorRoleEnum).values()}"
+            th:value="${role}" th:text="${role.creatorRoleType}"></option>
+      </select>
+      <br>
       <input type="submit" value="Create Contract">
     </form>
   </div>
