--- a/src/main/resources/templates/contract/display.html
+++ b/src/main/resources/templates/contract/display.html
@@ -7,26 +7,6 @@
 </head>
 <body>
 <div class="container">
-  Existing Contracts:
-  <table class="table table-bordered table-striped">
-    <thead>
-    <tr>
-      <td>AppUserID</td>
-      <td>Role</td>
-      <td>Text</td>
-    </tr>
-    </thead>
-    <tbody>
-      <tr th:each="contract: ${contracts}">
-        <td th:text="${contract.getAppUserId()}" />
-        <td th:text="${contract.creatorRole}" />
-        <td th:text="${contract.getText()}" />
-        <br>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<div class="container">
   <br><br>
   Contract user: [[${username}]]
   <br>
@@ -36,6 +16,128 @@
   <br>
   <br>
 </div>
+<div class="container">
+  My Contracts:
+  <table class="table table-bordered table-striped">
+    <thead>
+    <td>AppUserID</td>
+    <td>CoPartyID</td>
+    <td>Role</td>
+    <td>Text</td>
+    <td>PayerStake</td>
+    <td>PayeeStake</td>
+    <td>Payout$$$</td>
+    <td>PayerState</td>
+    <td>PayeeState</td>
+    <td>Completed</td>
+    </thead>
+    <br>
+    <tbody>
+    <tr th:each="user_contract: ${user_contracts}">
+      <td>
+        <a th:href="@{/contract/my_contract/{id}(id=${user_contract.getId()})}">
+          [[${user_contract.getAppUserId()}]]
+        </a>
+      </td>
+      <td>
+        <a th:href="@{/contract/my_contract/{id}(id=${user_contract.getId()})}">
+          [[${user_contract?.counterPartyId}]]
+        </a>
+      </td>
+      <td>
+        <a th:href="@{/contract/my_contract/{id}(id=${user_contract.getId()})}">
+          [[${user_contract.creatorRole}]]
+        </a>
+      </td>
+      <td>
+        <a th:href="@{/contract/my_contract/{id}(id=${user_contract.getId()})}">
+          [[${user_contract.getText()}]]
+        </a>
+      </td>
+      <td>
+        [[${user_contract.payerStake}]]
+      </td>
+      <td>
+        [[${user_contract.payeeStake}]]
+      </td>
+      <td>
+        [[${user_contract.payoutAmount}]]
+      </td>
+      <td>
+        [[${user_contract.payerState}]]
+      </td>
+      <td>
+        [[${user_contract.payeeState}]]
+      </td>
+      <td>
+        [[${user_contract.completed}]]
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+
+<div class="container">
+  Open Contracts:
+  <table class="table table-bordered table-striped">
+    <thead>
+    <td>AppUserID</td>
+    <td>CoPartyID</td>
+    <td>Role</td>
+    <td>Text</td>
+    <td>PayerStake</td>
+    <td>PayeeStake</td>
+    <td>Payout$$$</td>
+    <td>PayerState</td>
+    <td>PayeeState</td>
+    <td>Completed</td>
+    </thead>
+    <br>
+    <tbody>
+    <tr th:each="open_contract: ${open_contracts}">
+      <td>
+        <a th:href="@{/contract/display_contract/{id}(id=${open_contract.getId()})}">
+          [[${open_contract.getAppUserId()}]]
+        </a>
+      </td>
+      <td>
+        <a th:href="@{/contract/display_contract/{id}(id=${open_contract.getId()})}">
+          [[${open_contract?.counterPartyId}]]
+        </a>
+      </td>
+      <td>
+        <a th:href="@{/contract/display_contract/{id}(id=${open_contract.getId()})}">
+          [[${open_contract.creatorRole}]]
+        </a>
+      </td>
+      <td>
+        <a th:href="@{/contract/display_contract/{id}(id=${open_contract.getId()})}">
+          [[${open_contract.getText()}]]
+        </a>
+      </td>
+      <td>
+        [[${open_contract.payerStake}]]
+      </td>
+      <td>
+        [[${open_contract.payeeStake}]]
+      </td>
+      <td>
+        [[${open_contract.payoutAmount}]]
+      </td>
+      <td>
+        [[${open_contract.payerState}]]
+      </td>
+      <td>
+        [[${open_contract.payeeState}]]
+      </td>
+      <td>
+        [[${open_contract.completed}]]
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+
 <div class="container">
   <br>
   Create Contract
@@ -50,9 +152,10 @@
       <label>Role:</label>
       <select name="creatorRole" th:field="${contract.creatorRole}">
         <option th:each="role : ${T(com.prosilion.scdecisionmatrix.model.entity.CreatorRoleEnum).values()}"
-            th:value="${role}" th:text="${role.creatorRoleType}"></option>
+                th:value="${role}" th:text="${role.creatorRoleType}"></option>
       </select>
       <br>
+
       <input type="submit" value="Create Contract">
     </form>
   </div>
