--- a/src/main/resources/templates/contract/preview_contract.html
+++ b/src/main/resources/templates/contract/preview_contract.html
@@ -1,55 +1,56 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
-  <meta charset="ISO-8859-1">
-  <title>Preview for Contract HTML</title>
-  <link th:href="@{/css/style.css}" rel="stylesheet">
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+  <title>Contract Preview</title>
+  <link rel="stylesheet" th:href="@{/css/simple.css}"/>
 </head>
-<body>
-<div class="container">Current User Info:</div>
-<div class="container">
-  <br><br>
-  Contract reviewer: [[${username}]]
-  <br>
-  Security based user: <span sec:authentication="principal.username">User</span>
-  <br>
-  Security based Roles: <span sec:authentication="principal.authorities">Roles</span>
-  <br>
-  <br>
-</div>
-<div class="container">
-  <br>
-  Apply for Contract
-  <div class="wrapper">
-    <div class="title"><span>apply contract form</span></div>
+<main>
+  <h4 id="sec_user">User: <code class="language-plaintext highlighter-rouge"><span
+      sec:authentication="principal.username"/></code>&emsp;Role(s): <code class="language-plaintext highlighter-rouge"><span
+      sec:authentication="principal.authorities"/></code></h4>
+  <section>
+    <h4>Apply for Contract</h4>
     <form action="#" th:action="@{/contract/apply}" th:object="${contract}" method="post">
-      <label>Contract Text</label>
-      <td th:text="${contract.getAppUserId()}" />
-      <td th:text="${contract.creatorRole}" />
-      <td th:text="${contract.getText()}" />
-      <br>
+      <table style="width:90%">
+        <thead>
+        <tr>
+          <th>AppUserID</th>
+          <th>Creator Role</th>
+          <th>Contract Text</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td th:text="${contract.getAppUserId()}"/>
+          <td th:text="${contract.creatorRole}"/>
+          <td th:text="${contract.getText()}"/>
+        </tr>
+        <input type="hidden" th:field="${contract.id}" id="id"/>
+        <input type="hidden" th:field="${contract.text}" id="text"/>
 
-      <input type="hidden" th:field="${contract.id}" id="id"/>
-      <input type="hidden" th:field="${contract.text}" id="text"/>
+        <input type="hidden" th:field="${contract.payerStake}" id="payerStake"/>
+        <input type="hidden" th:field="${contract.payeeStake}" id="payeeStake"/>
+        <input type="hidden" th:field="${contract.payoutAmount}" id="payoutAmount"/>
 
-      <input type="hidden" th:field="${contract.payerStake}" id="payerStake"/>
-      <input type="hidden" th:field="${contract.payeeStake}" id="payeeStake"/>
-      <input type="hidden" th:field="${contract.payoutAmount}" id="payoutAmount"/>
+        <input type="hidden" th:field="${contract.payerState}" id="payerState"/>
+        <input type="hidden" th:field="${contract.payeeState}" id="payeeState"/>
+        <input type="hidden" th:field="${contract.completed}" id="completed"/>
 
-      <input type="hidden" th:field="${contract.payerState}" id="payerState"/>
-      <input type="hidden" th:field="${contract.payeeState}" id="payeeState"/>
-      <input type="hidden" th:field="${contract.completed}" id="completed"/>
+        <!--      <input type="hidden" th:field="${contract.agreedCompletionTime}" id="agreedCompletionTime"/>-->
 
-      <!--      <input type="hidden" th:field="${contract.agreedCompletionTime}" id="agreedCompletionTime"/>-->
+        <input type="hidden" th:field="${contract.creatorRole}" id="creatorRole"/>
 
-      <input type="hidden" th:field="${contract.creatorRole}" id="creatorRole"/>
+        <input type="hidden" th:field="${contract.appUserId}" id="appUserId"/>
+        <input type="hidden" th:value="${counterPartyId}" name="counterPartyId"/>
 
-      <input type="hidden" th:field="${contract.appUserId}" id="appUserId"/>
-      <input type="hidden" th:value="${counterPartyId}" name="counterPartyId" />
-
-      <input type="submit" value="Accept Contract (Preview page)">
+        <input type="submit" value="Accept Contract (Preview page)">
+        </tbody>
+      </table>
     </form>
-  </div>
-</div>
-</body>
+  </section>
+</main>
+<footer>
+  <p>Powered by Cadence 3 Security - LPEA/CAD Custom Applications - Mayo Clinic</p>
+</footer>
 </html>
