--- a/src/main/resources/templates/contract/view_contract.html
+++ b/src/main/resources/templates/contract/view_contract.html
@@ -1,80 +1,75 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
-  <meta charset="ISO-8859-1">
-  <title>Vote for Contract HTML</title>
-  <link th:href="@{/css/style.css}" rel="stylesheet">
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+  <title>Contract Vote</title>
+  <link rel="stylesheet" th:href="@{/css/simple.css}"/>
+  <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
-<body>
-<div class="container">Current User Info:</div>
-<div class="container">
-  <br><br>
-  Contract reviewer: [[${username}]]
-  <br>
-  Security based user: <span sec:authentication="principal.username">User</span>
-  <br>
-  Security based Roles: <span sec:authentication="principal.authorities">Roles</span>
-  <br>
-  <br>
-</div>
-<div class="container">
-  <br>
-  View my Contract state
-  <div class="wrapper">
-    <div class="title"><span>vote contract form</span></div>
+<main>
+  <h4 id="sec_user">
+    User: <code class="language-plaintext highlighter-rouge"><span sec:authentication="principal.username"/></code>&emsp;
+    Contract Role: <code class="language-plaintext highlighter-rouge">[[${role}]]</code>&emsp;
+    Auth Role(s): <code class="language-plaintext highlighter-rouge"><span sec:authentication="principal.authorities"/></code>
+  </h4>
+  <section>
+    <h4>Contract state</h4>
     <form action="#" th:action="@{/contract/vote}" th:object="${contract}" method="post">
-      <label>Contract Text</label>
-      <td th:text="${contract.getAppUserId()}" />
-      <td th:text="${contract.creatorRole}" />
-      <td th:text="${contract.getText()}" />
-      <br>
+      <table style="width:90%">
+        <thead>
+        <tr>
+          <th>AppUserID</th>
+          <th>Creator Role</th>
+          <th>Contract Text</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td th:text="${contract.getAppUserId()}"/>
+          <td th:text="${contract.creatorRole}"/>
+          <td th:text="${contract.getText()}"/>
+        </tr>
+        </tbody>
+      </table>
+      <h4>Vote Form</h4>
+      <div th:switch="${role}">
+        <div th:case="${T(com.prosilion.scdecisionmatrix.model.entity.CreatorRoleEnum).PAYER}">
+        <h5 id="payee_state">Payee State: <code class="language-plaintext highlighter-rouge"><span
+            th:text="${contract.payeeState} ?: 'awaiting'"/></code></h5>
+        <select name="payerState" th:field="${contract.payerState}">
+          <option
+              th:each="payer_state : ${T(com.prosilion.scdecisionmatrix.model.entity.ContractStateEnum).values()}"
+              th:value="${payer_state}" th:text="${payer_state.ContractStateType}">
+          </option>
+        </select>
+        <input type="hidden" th:field="${contract.payeeState}" id="payeeState"/>
+        </div>
+        <div th:case="${T(com.prosilion.scdecisionmatrix.model.entity.CreatorRoleEnum).PAYEE}">
+        <h5 id="payer_state">Payer State: <code class="language-plaintext highlighter-rouge"><span
+            th:text="${contract.payerState} ?: 'awaiting'"/></code></h5>
+        <select name="payeeState" th:field="${contract.payeeState}">
+          <option
+              th:each="payee_state : ${T(com.prosilion.scdecisionmatrix.model.entity.ContractStateEnum).values()}"
+              th:value="${payee_state}" th:text="${payee_state.ContractStateType}">
+          </option>
+        </select>
+        <input type="hidden" th:field="${contract.payerState}" id="payerState"/>
+        </div>
+      </div>
 
       <input type="hidden" th:field="${contract.id}" id="id"/>
       <input type="hidden" th:field="${contract.text}" id="text"/>
-
       <input type="hidden" th:field="${contract.payerStake}" id="payerStake"/>
       <input type="hidden" th:field="${contract.payeeStake}" id="payeeStake"/>
       <input type="hidden" th:field="${contract.payoutAmount}" id="payoutAmount"/>
-
-      <br>
-      ROLE: [[${role}]]
-      <br>
-      payer enum: [[${T(com.prosilion.scdecisionmatrix.model.entity.CreatorRoleEnum).PAYER}]]
-      <br>
-      payee enum: [[${T(com.prosilion.scdecisionmatrix.model.entity.CreatorRoleEnum).PAYEE}]]
-      <br>
-
-      <div th:switch="${role}">
-        <p th:case="${T(com.prosilion.scdecisionmatrix.model.entity.CreatorRoleEnum).PAYER}">
-          <br>**** current role PAYER **** payee state: [[${contract.payeeState}]]<br>
-          <select name="payerState" th:field="${contract.payerState}">
-            <option th:each="payer_state : ${T(com.prosilion.scdecisionmatrix.model.entity.ContractStateEnum).values()}"
-                    th:value="${payer_state}" th:text="${payer_state.ContractStateType}"></option>
-          </select>
-          <input type="hidden" th:field="${contract.payeeState}" id="payeeState"/>
-        </p>
-        <p th:case="${T(com.prosilion.scdecisionmatrix.model.entity.CreatorRoleEnum).PAYEE}">
-          <br>#### current role PAYEE #### payer state: [[${contract.payerState}]]<br>
-          <select name="payeeState" th:field="${contract.payeeState}">
-            <option th:each="payee_state : ${T(com.prosilion.scdecisionmatrix.model.entity.ContractStateEnum).values()}"
-                    th:value="${payee_state}" th:text="${payee_state.ContractStateType}"></option>
-          </select>
-          <input type="hidden" th:field="${contract.payerState}" id="payerState"/>
-        </p>
-      </div>
-
       <input type="hidden" th:field="${contract.completed}" id="completed"/>
-
       <!--      <input type="hidden" th:field="${contract.agreedCompletionTime}" id="agreedCompletionTime"/>-->
-
       <input type="hidden" th:field="${contract.creatorRole}" id="creatorRole"/>
-
       <input type="hidden" th:field="${contract.appUserId}" id="appUserId"/>
-      <input type="hidden" th:value="${contract.counterPartyId}" name="counterPartyId" />
+      <input type="hidden" th:value="${contract.counterPartyId}" name="counterPartyId"/>
 
       <input type="submit" value="Accept Contract (View page)">
     </form>
-  </div>
-</div>
-</body>
+  </section>
+</main>
 </html>
