--- a/src/main/resources/templates/thymeleaf/contract/view_contract.html
+++ b/src/main/resources/templates/thymeleaf/contract/view_contract.html
@@ -14,7 +14,7 @@
   </h4>
   <section>
     <h4>Contract state</h4>
-    <form action="#" th:action="@{/contract/vote}" th:object="${contract}" method="post">
+    <form action="#" th:action="@{/templates/thymeleaf/contract/vote}" th:object="${contract}" method="post">
       <table style="width:90%">
         <thead>
         <tr>
