commensurate updates for cad3 compatibility

--- a/src/main/resources/templates/thymeleaf/contract/preview_contract.html
+++ b/src/main/resources/templates/thymeleaf/contract/preview_contract.html
@@ -11,7 +11,7 @@
       sec:authentication="principal.authorities"/></code></h4>
   <section>
     <h4>Apply for Contract</h4>
-    <form action="#" th:action="@{/templates/thymeleaf/contract/apply}" th:object="${contract}" method="post">
+    <form action="#" th:action="@{/contract/apply}" th:object="${contract}" method="post">
       <table style="width:90%">
         <thead>
         <tr>
