--- a/src/main/resources/templates/thymeleaf/edit.html
+++ b/src/main/resources/templates/thymeleaf/edit.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
   <title>Edit User</title>
-  <link rel="stylesheet" th:href="@{/static/css/simple.css}"/>
+  <link rel="stylesheet" th:href="@{/css/simple.css}"/>
 </head>
 <body>
 <header>Edit User</header>
