proper redirect & UI fixes

--- a/src/main/resources/templates/thymeleaf/contract/preview_contract.html
+++ b/src/main/resources/templates/thymeleaf/contract/preview_contract.html
@@ -4,6 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
   <title>Contract Preview</title>
   <link rel="stylesheet" th:href="@{/css/simple.css}"/>
+  <link rel="stylesheet" th:href="@{/css/tablestyles.css}"/>
 </head>
 <main>
   <h4 id="sec_user">User: <code class="language-plaintext highlighter-rouge"><span
