--- a/src/main/resources/templates/thymeleaf/contract/view_contract.html
+++ b/src/main/resources/templates/thymeleaf/contract/view_contract.html
@@ -4,6 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
   <title>Contract Vote</title>
   <link rel="stylesheet" th:href="@{/css/simple.css}"/>
+  <link rel="stylesheet" th:href="@{/css/tablestyles.css}"/>
 </head>
 <main>
   <h4 id="sec_user">
